--- a/views/search.hbs
+++ b/views/search.hbs
@@ -7,6 +7,7 @@
 
   <form action="/login" method="POST" id="form-container">
     <div class="flex-box">
+      <a href="/">Homepage</a>
       <a href="/profile">Profile</a>
       <a href="/logout">Logout</a>
     </div>
