--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -8,13 +8,25 @@
     <link rel="stylesheet" href="/stylesheets/profile.css" />
   </head>
 
-  <header class="header">
-    <h1 role="banner"><a href="/">easytune</a></h1>
-    <ul class="nav">
-      <li><a href="/">Back to Homepage</a></li>
-      <li><a href="/signup">Logout</a></li>
-    </ul>
-  </header>
+  <div id="navBar" class="flex-navbar">
+
+    <h1 class="flex-element">easytune</h1>
+
+
+    <form action="/login" method="POST" id="form-container">
+      <div class="flex-element">
+        <a href="/">Homepage</a>
+        <a href="/logout">Logout</a>
+      </div>
+
+
+      {{#if message}}
+      <div class="error-message">{{ message }}</div>
+      {{/if}}
+      <br><br>
+
+    </form>
+  </div>
 
   <div class="flex-box">
     <p>{{user.name}}'s Events</p>
@@ -28,7 +40,6 @@
       <div class="card-body">
         <h5 class="card-title">
           <p class="card-text">{{user.starred_events}}</p>{{this.name}}<span>
-            <button type="button" class="favourite" id={{ this.id }} onclick="likeThis(this)">⭐</button></span>
         </h5>
         <p class="card-text">[ {{this.classifications.[0].genre.name}} ] <br>
           where: {{this._embedded.venues.[0].name}} <br>
